Modifying button styles and quote styles

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
     </div>
     <div class="row p-2">
       <div class="col-auto p-1" id="editor">
-        <textarea class="w-100 border border-success" id="editor-textarea" onkeyup="duringInput()"></textarea>
+        <textarea class="w-100 border border-success" id="editor-textarea"></textarea>
       </div>
       <div class="col p-1" id="preview">
         <div class="border border-info" id="preview-content"></div>
