Added format shortcut function

--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
   <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.4.1.min.js"
     integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+  <script src="./js/common.js"></script>
   <script src="./js/repository.js"></script>
   <script src="./js/indexedDB.js"></script>
+  <script src="./js/formattingshortcut.js"></script>
   <script src="./js/main.js"></script>
 </head>
 
