--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@
       <path fill-rule="evenodd"
         d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z" />
     </symbol>
+    <symbol id="save" viewBox="0 0 16 16">
+      <path d="M2 1a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H9.5a1 1 0 0 0-1 1v7.293l2.646-2.647a.5.5 0 0 1 .708.708l-3.5 3.5a.5.5 0 0 1-.708 0l-3.5-3.5a.5.5 0 1 1 .708-.708L7.5 9.293V2a2 2 0 0 1 2-2H14a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2a2 2 0 0 1 2-2h2.5a.5.5 0 0 1 0 1H2z"/>
+    </symbol>
     <symbol id="checked" viewBox="0 0 16 16">
       <path
         d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z" />
@@ -97,6 +100,11 @@
         <button id="darkmode-btn" class="btn btn-outline-primary ms-2">
           <svg width="20" height="20" fill="currentColor">
             <use id="darkmode-btn-svg" xlink:href="#dark_mode"></use>
+          </svg>
+        </button>
+        <button id="save-btn" class="btn btn-outline-primary ms-2">
+          <svg width="20" height="20" fill="currentColor">
+            <use id="darkmode-btn-svg" xlink:href="#save"></use>
           </svg>
         </button>
         <button id="menu-btn" class="btn btn-outline-primary ms-2" type="button" data-bs-toggle="offcanvas"
