--- a/index.html
+++ b/index.html
@@ -13,13 +13,11 @@
   <link rel="stylesheet" href="./css/style.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/highlight.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
-  <script src="https://code.jquery.com/jquery-3.4.1.min.js"
-    integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
   <script src="./js/common.js"></script>
   <script src="./js/repository.js"></script>
   <script src="./js/indexedDB.js"></script>
-  <script src="./js/formattingshortcut.js"></script>
   <script src="./js/main.js"></script>
+  <script src="./js/shortcut.js"></script>
 </head>
 
 <body>
@@ -90,6 +88,12 @@
       <path d="M10.5 8a2.5 2.5 0 1 1-5 0 2.5 2.5 0 0 1 5 0" />
       <path d="M0 8s3-5.5 8-5.5S16 8 16 8s-3 5.5-8 5.5S0 8 0 8m8 3.5a3.5 3.5 0 1 0 0-7 3.5 3.5 0 0 0 0 7" />
     </symbol>
+    <symbol id="search" viewBox="0 0 16 16">
+      <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
+    </symbol>
+    <symbol id="close" viewBox="0 0 16 16">
+      <path d="M2.146 2.854a.5.5 0 1 1 .708-.708L8 7.293l5.146-5.147a.5.5 0 0 1 .708.708L8.707 8l5.147 5.146a.5.5 0 0 1-.708.708L8 8.707l-5.146 5.147a.5.5 0 0 1-.708-.708L7.293 8 2.146 2.854Z"/>
+    </symbol>
   </svg>
   <header class="container">
     <div class="d-flex flex-wrap justify-content-center pt-3">
@@ -119,19 +123,27 @@
       <div class="offcanvas-header d-flex justify-content-between">
         <h5 id="offcanvasLabel">履歴</h5>
         <div class="d-flex align-items-center">
+          <button id="search-btn" class="btn btn-outline-secondary me-2" data-bs-toggle="modal" data-bs-target="#searchModal" data-bs-toggle="tooltip" data-bs-placement="bottom" title="search">
+            <svg width="20" height="20" fill="currentColor">
+              <use id="search-btn-svg" xlink:href="#search"></use>
+            </svg>
+          </button>
           <button id="darkmode-btn" class="btn btn-outline-secondary me-2">
             <svg width="20" height="20" fill="currentColor">
               <use id="darkmode-btn-svg" xlink:href="#dark_mode"></use>
             </svg>
           </button>
-          <input type="checkbox" class="btn-check" id="autoSave" autocomplete="off" checked>
-          <label class="btn btn-outline-secondary me-3" for="autoSave">自動保存 <span id="autoSaveIcon"
+          <label class="btn btn-outline-secondary me-3" for="autoSave">
+            <span class="d-none d-md-inline">自動保存</span>
+            <span id="autoSaveIcon"
               class="text-success">
               <svg width="20" height="20" fill="currentColor">
                 <use id="autoSaveIcon-btn-svg" xlink:href="#checked"></use>
               </svg>
-            </span></label>
-          <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+            </span>
+            <input type="checkbox" class="btn-check" id="autoSave" autocomplete="off" checked>
+          </label>
+          <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close" id="offcanvas-close"></button>
         </div>
       </div>
       <div class="offcanvas-body">
@@ -146,14 +158,14 @@
         <div class="col-6">
           <h2 class="accordion-header" id="word_count_header">
             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#word_count_body" aria-expanded="false" aria-controls="word_count_body">
-              word count
+              文字数
             </button>
           </h2>
         </div>
         <div class="col-6">
           <h2 class="accordion-header" id="font_size_header">
             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#font_size_body" aria-expanded="false" aria-controls="font_size_body">
-              font size
+              文字サイズ
             </button>
           </h2>
         </div>
@@ -210,7 +222,45 @@
         <div class="border border-info" id="preview-content"></div>
       </div>
     </div>
-  </main>
+  </main>  
+  <div class="modal fade" id="searchModal" tabindex="-1" aria-labelledby="searchModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable modal-fullscreen-lg-down">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="searchModalLabel">検索</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" id="modal-close"></button>
+        </div>
+        <div class="modal-body">
+          <input class="form-control" id="search-word" type="text" placeholder="Search...">
+          <hr>
+          <div class="row">
+            <div class="col list-group list-group-flush w-100" id="search-items"></div>
+            <div class="col-7 card px-0 d-none" id="search-item-detail">
+              <div class="card-header d-flex justify-content-between">
+                <div id="search-item-date">2024-08-01</div>
+                <div>
+                  <button class="btn btn-outline-secondary" id="search-item-display-btn">
+                    <svg class="bi" width="20" height="20" fill="currentColor">
+                      <use xlink:href="#indicate"></use>
+                    </svg>
+                  </button>
+                  <button class="btn btn-outline-danger" id="search-item-display-close-btn">
+                    <svg class="bi" width="20" height="20" fill="currentColor">
+                      <use xlink:href="#close"></use>
+                    </svg>
+                  </button>
+                </div>
+              </div>
+              <div class="card-body" id="search-item-text"></div>
+            </div>
+          </div>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        </div>
+      </div>
+    </div>
+  </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
     crossorigin="anonymous"></script>
