--- a/index.html
+++ b/index.html
@@ -94,6 +94,9 @@
     <symbol id="close" viewBox="0 0 16 16">
       <path d="M2.146 2.854a.5.5 0 1 1 .708-.708L8 7.293l5.146-5.147a.5.5 0 0 1 .708.708L8.707 8l5.147 5.146a.5.5 0 0 1-.708.708L8 8.707l-5.146 5.147a.5.5 0 0 1-.708-.708L7.293 8 2.146 2.854Z"/>
     </symbol>
+    <symbol id="isCaseSensitive" viewBox="0 0 16 16">
+      <path d="m2.244 13.081.943-2.803H6.66l.944 2.803H8.86L5.54 3.75H4.322L1 13.081h1.244zm2.7-7.923L6.34 9.314H3.51l1.4-4.156h.034zm9.146 7.027h.035v.896h1.128V8.125c0-1.51-1.114-2.345-2.646-2.345-1.736 0-2.59.916-2.666 2.174h1.108c.068-.718.595-1.19 1.517-1.19.971 0 1.518.52 1.518 1.464v.731H12.19c-1.647.007-2.522.8-2.522 2.058 0 1.319.957 2.18 2.345 2.18 1.06 0 1.716-.43 2.078-1.011zm-1.763.035c-.752 0-1.456-.397-1.456-1.244 0-.65.424-1.115 1.408-1.115h1.805v.834c0 .896-.752 1.525-1.757 1.525z"/>
+    </symbol>
   </svg>
   <header class="container">
     <div class="d-flex flex-wrap justify-content-center pt-3">
@@ -148,6 +151,11 @@
       </div>
       <div class="offcanvas-body">
         <ul id="historyList" class="list-group list-group-flush text-start"></ul>
+      </div>
+      <div class="offcanvas-footer p-3">
+        <div class="d-flex justify-content-end">
+          <button class="btn btn-outline-info" id="recovery-btn" data-bs-toggle="modal" data-bs-target="#recoveryModal" disabled>復元</button>
+        </div>
       </div>
     </div>
   </header>
@@ -222,20 +230,32 @@
         <div class="border border-info" id="preview-content"></div>
       </div>
     </div>
-  </main>  
+  </main>
   <div class="modal fade" id="searchModal" tabindex="-1" aria-labelledby="searchModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable modal-fullscreen-xl-down modal-dialog modal-xl">
       <div class="modal-content">
         <div class="modal-header">
           <h5 class="modal-title" id="searchModalLabel">検索</h5>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" id="modal-close"></button>
+          <button type="button" class="btn-close modal-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
-          <input class="form-control" id="search-word" type="text" placeholder="Search...">
+          <div class="row">
+            <div class="col-11">
+              <input class="form-control" id="search-word" type="text" placeholder="Search...">
+            </div>
+            <div class="col-1">
+              <input type="checkbox" class="btn-check" id="search-isCaseSensitive" autocomplete="off">
+              <label class="btn btn-outline-info" for="search-isCaseSensitive">
+                <svg class="bi" width="20" height="20" fill="currentColor">
+                  <use xlink:href="#isCaseSensitive"></use>
+                </svg>
+              </label>
+            </div>
+          </div>
           <hr>
           <div class="row">
-            <div class="col list-group list-group-flush w-100" id="search-items"></div>
-            <div class="col-7 card px-0 d-none" id="search-item-detail">
+            <div class="col overflow-auto list-group list-group-flush w-100" id="search-items"></div>
+            <div class="col-7 overflow-auto card px-0 d-none" id="search-item-detail">
               <div class="card-header d-flex justify-content-between">
                 <div id="search-item-date">2024-08-01</div>
                 <div>
@@ -244,7 +264,7 @@
                       <use xlink:href="#indicate"></use>
                     </svg>
                   </button>
-                  <button class="btn btn-outline-danger" id="search-item-display-close-btn">
+                  <button class="btn btn-outline-secondary" id="search-item-display-close-btn">
                     <svg class="bi" width="20" height="20" fill="currentColor">
                       <use xlink:href="#close"></use>
                     </svg>
@@ -255,6 +275,17 @@
             </div>
           </div>
         </div>
+      </div>
+    </div>
+  </div>
+  <div class="modal fade" id="recoveryModal" tabindex="-1" aria-labelledby="recoveryModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable modal-fullscreen-xl-down modal-xl">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="recoveryModalLabel">復元</h5>
+          <button type="button" class="btn-close modal-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body" id="recovery-items"></div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
         </div>
