Migrate Styling Library from Bootstrap5 to TailwindCSS

--- a/src/index.html
+++ b/src/index.html
@@ -4,10 +4,13 @@
   <meta charset="UTF-8">
   <title>Memo</title>
   <link rel="stylesheet" href="https://uicdn.toast.com/editor/latest/toastui-editor.min.css">
-  <link rel="stylesheet" href="https://uicdn.toast.com/editor/latest/theme/toastui-editor-dark.min.css" />
+  <link rel="stylesheet" href="https://uicdn.toast.com/editor/latest/theme/toastui-editor-dark.min.css">
+  <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
-  <div id="editor"></div>
+  <section class="p-10">
+    <div id="editor"></div>
+  </section>
   <script type="module" src="./index.js"></script>
 </body>
 </html>
