Implement total / selected text character count

--- a/src/index.html
+++ b/src/index.html
@@ -69,6 +69,7 @@
 
   <main class="max-w-5xl mx-auto px-4">
     <div id="editor"></div>
+    <div id="count" class="pt-5 text-sm"></div>
   </main>
 
   <script type="module" src="./index.js"></script>
