--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Memo</title>
+  <title>Memo App</title>
   <link rel="stylesheet" href="https://uicdn.toast.com/editor/latest/toastui-editor.min.css">
   <link rel="stylesheet" href="https://uicdn.toast.com/editor/latest/theme/toastui-editor-dark.min.css">
   <link rel="stylesheet" href="./styles/tailwind.css">
@@ -11,7 +11,6 @@
 </head>
 
 <body class="bg-white text-gray-900 dark:bg-gray-900 dark:text-white">
-
   <svg xmlns="http://www.w3.org/2000/svg" class="hidden">
     <symbol id="clipboard_default" viewBox="0 0 16 16">
       <path
@@ -42,6 +41,11 @@
       <path
         d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z" />
     </symbol>
+    <symbol id="unChecked" viewBox="0 0 16 16">
+      <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z" />
+      <path
+        d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708z" />
+    </symbol>
     <symbol id="close" viewBox="0 0 16 16">
       <path
         d="M2.146 2.854a.5.5 0 1 1 .708-.708L8 7.293l5.146-5.147a.5.5 0 0 1 .708.708L8.707 8l5.147 5.146a.5.5 0 0 1-.708.708L8 8.707l-5.146 5.147a.5.5 0 0 1-.708-.708L7.293 8 2.146 2.854Z" />
@@ -52,37 +56,72 @@
     </symbol>
   </svg>
 
-  <header class="max-w-5xl mx-auto px-4 py-1">
-    <div class="flex flex-wrap justify-center pt-3">
-      <div class="flex items-center mr-auto">
+  <header class="max-w-7xl mx-auto px-4 py-1">
+    <div class="flex flex-wrap justify-between items-center pt-3">
+      <div class="flex items-center">
         <a href="/" class="dark:text-gray-200 no-underline">
           <span class="text-3xl font-serif">Memo App</span>
         </a>
       </div>
-      <button id="menu-btn"
-        class="mx-1 w-10 h-10 flex items-center justify-center border border-blue-500 text-blue-500 rounded hover:bg-blue-500 hover:text-white">
-        <svg width="20" height="20" fill="currentColor">
-          <use xlink:href="#menu"></use>
-        </svg>
-      </button>
-      <button id="clipboard-btn"
-        class="mx-1 w-10 h-10 flex items-center justify-center border border-blue-500 text-blue-500 rounded hover:bg-blue-500 hover:text-white">
-        <svg width="20" height="20" fill="currentColor">
-          <use xlink:href="#clipboard_default"></use>
-        </svg>
-      </button>
-      <button id="toggle-theme"
-        class="mx-1 w-10 h-10 flex items-center justify-center border border-blue-500 text-blue-500 rounded hover:bg-blue-500 hover:text-white">
-        <svg width="20" height="20" fill="currentColor">
-          <use xlink:href="#dark_mode"></use>
-        </svg>
-      </button>
+      <div class="flex space-x-2">
+        <button id="clipboard-btn"
+          class="w-10 h-10 flex items-center justify-center border border-blue-500 text-blue-500 rounded hover:bg-blue-500 hover:text-white">
+          <svg width="20" height="20" fill="currentColor">
+            <use xlink:href="#clipboard_default"></use>
+          </svg>
+        </button>
+        <button id="save-btn"
+          class="w-10 h-10 flex items-center justify-center border border-blue-500 text-blue-500 rounded hover:bg-blue-500 hover:text-white">
+          <svg width="20" height="20" fill="currentColor">
+            <use xlink:href="#save"></use>
+          </svg>
+        </button>
+        <button id="menu-btn"
+          class="w-10 h-10 flex items-center justify-center border border-blue-500 text-blue-500 rounded hover:bg-blue-500 hover:text-white">
+          <svg width="20" height="20" fill="currentColor">
+            <use xlink:href="#menu"></use>
+          </svg>
+        </button>
+      </div>
     </div>
   </header>
 
+  <!-- Side menu: appears from right; on small screens full width, on desktop 75% width -->
+  <div id="side-menu"
+    class="fixed top-0 right-0 h-full w-full md:w-[75%] bg-white dark:bg-gray-800 shadow-md transform translate-x-full transition-transform duration-300 z-50">
+    <div class="p-4 flex flex-col h-full">
+      <div class="flex justify-end space-x-4">
+        <button id="toggle-theme"
+          class="w-10 h-10 flex items-center justify-center border border-blue-500 text-blue-500 rounded hover:bg-blue-500 hover:text-white">
+          <svg width="20" height="20" fill="currentColor">
+            <use xlink:href="#dark_mode"></use>
+          </svg>
+        </button>
+        <!-- Auto-save button with text and icon -->
+        <button id="auto-save-btn"
+          class="flex items-center space-x-2 px-3 py-2 border border-blue-500 rounded hover:bg-blue-500 hover:text-white">
+          <span class="text-sm">Auto Save</span>
+          <svg width="20" height="20" fill="currentColor">
+            <use xlink:href="#unChecked"></use>
+          </svg>
+        </button>
+        <button id="close-menu-btn" class="text-gray-700 dark:text-gray-200">
+          <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <use xlink:href="#close"></use>
+          </svg>
+        </button>
+      </div>
+      <h2 class="text-xl font-bold mb-4">Saved Texts</h2>
+      <!-- List container for saved texts, scrollable if needed -->
+      <div class="flex-1 overflow-y-auto">
+        <ul id="side-menu-content" class="space-y-2"></ul>
+      </div>
+    </div>
+  </div>
+
   <hr class="border-gray-700 my-2">
 
-  <main class="max-w-5xl mx-auto px-4">
+  <main class="max-w-7xl mx-auto px-4">
     <div id="editor"></div>
     <div id="count" class="pt-5 text-sm"></div>
   </main>
