--- a/src/index.html
+++ b/src/index.html
@@ -54,6 +54,16 @@
       <path
         d="m2.244 13.081.943-2.803H6.66l.944 2.803H8.86L5.54 3.75H4.322L1 13.081h1.244zm2.7-7.923L6.34 9.314H3.51l1.4-4.156h.034zm9.146 7.027h.035v.896h1.128V8.125c0-1.51-1.114-2.345-2.646-2.345-1.736 0-2.59.916-2.666 2.174h1.108c.068-.718.595-1.19 1.517-1.19.971 0 1.518.52 1.518 1.464v.731H12.19c-1.647.007-2.522.8-2.522 2.058 0 1.319.957 2.18 2.345 2.18 1.06 0 1.716-.43 2.078-1.011zm-1.763.035c-.752 0-1.456-.397-1.456-1.244 0-.65.424-1.115 1.408-1.115h1.805v.834c0 .896-.752 1.525-1.757 1.525z" />
     </symbol>
+    <symbol id="search" viewBox="0 0 16 16">
+      <path
+        d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z">
+      </path>
+    </symbol>
+    <symbol id="isCaseSensitive" viewBox="0 0 16 16">
+      <path
+        d="m2.244 13.081.943-2.803H6.66l.944 2.803H8.86L5.54 3.75H4.322L1 13.081h1.244zm2.7-7.923L6.34 9.314H3.51l1.4-4.156h.034zm9.146 7.027h.035v.896h1.128V8.125c0-1.51-1.114-2.345-2.646-2.345-1.736 0-2.59.916-2.666 2.174h1.108c.068-.718.595-1.19 1.517-1.19.971 0 1.518.52 1.518 1.464v.731H12.19c-1.647.007-2.522.8-2.522 2.058 0 1.319.957 2.18 2.345 2.18 1.06 0 1.716-.43 2.078-1.011zm-1.763.035c-.752 0-1.456-.397-1.456-1.244 0-.65.424-1.115 1.408-1.115h1.805v.834c0 .896-.752 1.525-1.757 1.525z">
+      </path>
+    </symbol>
   </svg>
 
   <header class="max-w-7xl mx-auto px-4 py-1">
@@ -86,11 +96,18 @@
     </div>
   </header>
 
+
   <!-- Side menu: appears from right; on small screens full width, on desktop 75% width -->
   <div id="side-menu"
     class="fixed top-0 right-0 h-full w-full md:w-[75%] bg-white dark:bg-gray-800 shadow-md transform translate-x-full transition-transform duration-300 z-50">
     <div class="p-4 flex flex-col h-full">
       <div class="flex justify-end space-x-4">
+        <button id="search-btn"
+          class="w-10 h-10 flex items-center justify-center border border-blue-500 text-blue-500 rounded hover:bg-blue-500 hover:text-white">
+          <svg width="20" height="20" fill="currentColor">
+            <use xlink:href="#search"></use>
+          </svg>
+        </button>
         <button id="toggle-theme"
           class="w-10 h-10 flex items-center justify-center border border-blue-500 text-blue-500 rounded hover:bg-blue-500 hover:text-white">
           <svg width="20" height="20" fill="currentColor">
@@ -125,6 +142,50 @@
     <div id="editor"></div>
     <div id="count" class="pt-5 text-sm"></div>
   </main>
+
+  <!-- Search modal -->
+  <!-- Search modal -->
+  <div id="search-modal" class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center z-50 hidden">
+    <div class="bg-white dark:bg-gray-800 w-full max-w-6xl h-5/6 m-5 flex flex-col relative">
+      <!-- Top row: Close button -->
+      <div class="flex justify-end p-2">
+        <button id="close-search-btn"
+          class="p-2 text-gray-700 dark:text-gray-200 hover:bg-gray-200 dark:hover:bg-gray-700 rounded">
+          <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <use xlink:href="#close"></use>
+          </svg>
+        </button>
+      </div>
+      <!-- Search input row: full-width -->
+      <div class="flex items-center px-4">
+        <input id="search-input" type="text" placeholder="Enter search text"
+          class="flex-1 p-2 border border-gray-300 dark:bg-gray-800 dark:border-gray-600 rounded" />
+        <button id="toggle-case-btn"
+          class="ml-2 p-2 border border-gray-300 dark:border-gray-600 rounded hover:bg-gray-200 dark:hover:bg-gray-700">
+          <svg width="20" height="20" fill="currentColor">
+            <use xlink:href="#isCaseSensitive"></use>
+          </svg>
+        </button>
+      </div>
+      <!-- Search results section -->
+      <div id="search-container" class="flex flex-1 p-4 overflow-hidden">
+        <div id="search-results"
+          class="w-full overflow-y-auto border border-gray-200 dark:border-gray-700 rounded p-2 flex flex-col space-y-2">
+        </div>
+        <div id="search-preview"
+          class="hidden w-1/2 overflow-y-auto border border-gray-200 dark:border-gray-700 rounded p-2 ml-4">
+          <div class="flex items-center justify-between">
+            <h2 class="text-lg font-bold mb-2">Preview</h2>
+            <!-- Display button is always present -->
+            <button id="preview-display-btn" class="bg-blue-500 hover:bg-blue-600 text-white text-xs rounded px-2 py-1">
+              Display
+            </button>
+          </div>
+          <div id="preview"></div>
+        </div>
+      </div>
+    </div>
+  </div>
 
   <script type="module" src="./index.js"></script>
 </body>
