--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ja" class="">
+<html lang="ja">
 
 <head>
   <meta charset="UTF-8">
@@ -96,7 +96,6 @@
     </div>
   </header>
 
-
   <!-- Side menu: appears from right; on small screens full width, on desktop 75% width -->
   <div id="side-menu"
     class="fixed top-0 right-0 h-full w-full md:w-[75%] bg-white dark:bg-gray-800 shadow-md transform translate-x-full transition-transform duration-300 z-50">
@@ -143,7 +142,6 @@
     <div id="count" class="pt-5 text-sm"></div>
   </main>
 
-  <!-- Search modal -->
   <!-- Search modal -->
   <div id="search-modal" class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center z-50 hidden">
     <div class="bg-white dark:bg-gray-800 w-full max-w-6xl h-5/6 m-5 flex flex-col relative">
