Add Service Worker for Offline Support (PWA)

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="https://uicdn.toast.com/editor/latest/theme/toastui-editor-dark.min.css">
   <link rel="stylesheet" href="./styles/tailwind.css">
   <link rel="stylesheet" href="./styles/base.css">
+  <link rel="manifest" href="./manifest.json">
   <script>
     (function() {
       if (window.innerWidth < 480) document.querySelector("meta[name=viewport]").setAttribute("content", "width=480, user-scalable=no");
