--- a/src/index.html
+++ b/src/index.html
@@ -76,12 +76,15 @@
         d="m2.244 13.081.943-2.803H6.66l.944 2.803H8.86L5.54 3.75H4.322L1 13.081h1.244zm2.7-7.923L6.34 9.314H3.51l1.4-4.156h.034zm9.146 7.027h.035v.896h1.128V8.125c0-1.51-1.114-2.345-2.646-2.345-1.736 0-2.59.916-2.666 2.174h1.108c.068-.718.595-1.19 1.517-1.19.971 0 1.518.52 1.518 1.464v.731H12.19c-1.647.007-2.522.8-2.522 2.058 0 1.319.957 2.18 2.345 2.18 1.06 0 1.716-.43 2.078-1.011zm-1.763.035c-.752 0-1.456-.397-1.456-1.244 0-.65.424-1.115 1.408-1.115h1.805v.834c0 .896-.752 1.525-1.757 1.525z">
       </path>
     </symbol>
+    <symbol id="github" viewBox="0 0 16 16">
+      <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27s1.36.09 2 .27c1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.01 8.01 0 0 0 16 8c0-4.42-3.58-8-8-8"/>
+    </symbol>
   </svg>
 
   <header class="max-w-7xl mx-auto px-4 py-1">
     <div class="flex flex-wrap justify-between items-center pt-3">
       <div class="flex items-center">
-        <a href="/" class="dark:text-gray-200 no-underline">
+        <a href="https://ymmy833y.github.io/memo-app/" class="dark:text-gray-200 no-underline">
           <span class="text-3xl font-serif">Memo App</span>
         </a>
       </div>
@@ -196,6 +199,20 @@
       </div>
     </div>
   </div>
+
+  <footer class="mt-2 py-4 bg-gray-100 dark:bg-gray-800">
+    <div class="max-w-7xl mx-auto px-4">
+      <p class="text-center text-sm text-gray-700 dark:text-gray-300">&copy; 2025 Memo App. All rights reserved.</p>
+      <div class="mt-2 flex justify-center space-x-4">
+        <a href="https://github.com/Ymmy833y/memo-app" target="_blank" rel="noopener noreferrer" class="flex items-center text-xs text-blue-500 hover:underline">
+          <svg class="w-4 h-4 mr-1" fill="currentColor">
+            <use xlink:href="#github"></use>
+          </svg>
+          GitHub
+        </a>
+      </div>
+    </div>
+  </footer>
 
   <script type="module" src="./index.js"></script>
 </body>
